# blocks

./: package.json
.github/workflows/: release-tauri-app.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
