[package]
name = "blocks-ui"
version = "0.1.0"
description = "blocks-ui.com"
authors = [ "you" ]
license = ""
repository = ""
default-run = "blocks-ui"
edition = "2018"
build = "src/build.rs"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [ "icons/**" ]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.4", features = [ "all-api", "edge" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "blocks-ui"
path = "src/main.rs"
